# tiledb-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  RELEASING.md  build.rs  cliff.toml  compile_flags.txt
test-utils/arrow-ext/: Cargo.toml
test-utils/arrow-ext/src/: array.rs  lib.rs  record_batch.rs
test-utils/arrow-ext/src/strategy/: array.rs  record_batch.rs  schema.rs
test-utils/arrow-proptest-strategies/: Cargo.toml
test-utils/arrow-proptest-strategies/src/: array.rs  lib.rs  record_batch.rs  schema.rs
test-utils/cells/: Cargo.toml
test-utils/cells/src/: arrow.rs  field.rs  lib.rs  strategy.rs
test-utils/cells/src/write/: mod.rs  strategy.rs
tiledb-arrow/: Cargo.toml
tiledb-arrow/src/: lib.rs
tiledb/api/: Cargo.toml  build.rs
tiledb/api/examples/: aggregates.rs  fragment_info.rs  groups.rs  memory_usage.rs  multi_range_subarray.rs  multi_range_subarray_arrow.rs  query_condition_dense.rs  query_condition_dense_arrow.rs  query_condition_sparse.rs  query_condition_sparse_arrow.rs  quickstart_dense.rs  quickstart_dense_arrow.rs  quickstart_sparse_string.rs  quickstart_sparse_string_arrow.rs  reading_incomplete.rs  reading_incomplete_arrow.rs  using_tiledb_stats.rs
tiledb/api/examples/output/: .gitignore
tiledb/api/src/: arrow.rs  column.rs  config.rs  context.rs  convert.rs  datatype.rs  error.rs  extent.rs  filesystem.rs  filter.rs  filter_list.rs  group.rs  key.rs  lib.rs  metadata.rs  non_empty_domain.rs  range.rs  stats.rs  strategy.rs  string.rs  test_util.rs  vfs.rs
tiledb/api/src/array/: attribute.rs  dimension.rs  domain.rs  enumeration.rs  fragment_info.rs  mod.rs  schema.rs  strategy.rs
tiledb/api/src/array/attribute/: arrow.rs  mod.rs  pod.rs  serde.rs  strategy.rs
tiledb/api/src/array/dimension/: arrow.rs  mod.rs  pod.rs  serde.rs  strategy.rs
tiledb/api/src/array/domain/: mod.rs  pod.rs  serde.rs  strategy.rs
tiledb/api/src/array/enumeration/: mod.rs  pod.rs  serde.rs  strategy.rs
tiledb/api/src/array/schema/: arrow.rs  mod.rs  pod.rs  (+2 more)
tiledb/api/src/datatype/: arrow.rs  logical.rs  mod.rs  physical.rs  strategy.rs
tiledb/api/src/filter/: arrow.rs  ftype.rs  list.rs  mod.rs  option.rs  pod.rs  serde.rs  strategy.rs  webp.rs
tiledb/api/src/group/: mod.rs
tiledb/api/src/query/: buffer.rs  conditions.rs  mod.rs  read.rs  sizeinfo.rs  status.rs  strategy.rs  subarray.rs  traits.rs  write.rs
tiledb/api/src/query_arrow/: arrow.rs  buffers.rs  fields.rs  mod.rs  subarray.rs
tiledb/api/src/strategy/: datatype.rs  filter.rs  mod.rs
tiledb/api/src/tests/: mod.rs
tiledb/api/src/util/: mod.rs  strategy.rs
tiledb/api/tests/: compile_fail.rs  core-290.rs  enum_conversion_tests.rs
tiledb/api/tests/array/: sync.rs  sync.stderr
tiledb/api2/: Cargo.toml  build.rs
tiledb/api2/cpp/: config.cc  context.cc  context.h  exception.h
tiledb/api2/src/: array.rs  attribute.rs  config.rs  context.rs  dimension.rs  domain.rs  enumeration.rs  error.rs  filter_list.rs  lib.rs  query.rs  query_buffers.rs  schema.rs  tests.rs
tiledb/arrow/: Cargo.toml
tiledb/arrow/src/: attribute.rs  datatype.rs  dimension.rs  filter.rs  lib.rs  schema.rs
tiledb/common/: Cargo.toml
tiledb/common/src/: key.rs  lib.rs  metadata.rs  range.rs  vfs.rs
tiledb/common/src/array/: attribute.rs  dimension.rs  mod.rs
tiledb/common/src/datatype/: arrow.rs  logical.rs  mod.rs  physical.rs  strategy.rs
tiledb/common/src/filter/: mod.rs  webp.rs
tiledb/common/src/query/: mod.rs  read.rs
tiledb/pod/: Cargo.toml
tiledb/pod/src/: lib.rs
tiledb/pod/src/array/: mod.rs
tiledb/pod/src/filter/: mod.rs  strategy.rs
tiledb/pod/src/query/: mod.rs  subarray.rs
tiledb/proc-macro/: Cargo.toml
tiledb/proc-macro/src/: context.rs  lib.rs  option_subset.rs  query.rs  ty.rs
tiledb/proc-macro/tests/: context.rs
tiledb/proptests/: Cargo.toml
tiledb/proptests/src/: attribute.rs  datatype.rs  dimension.rs  domain.rs  explorer.rs  filter.rs  filter_list.rs  lib.rs  minset.rs  schema.rs  util.rs
tiledb/proptests/src/filter/: list.rs  mod.rs
tiledb/proptests/tests/: datatype.rs  filter.rs  minset.rs  schema.rs
tiledb/queries/: Cargo.toml  build.rs
tiledb/queries/examples/: aggregate-adapters.rs  aggregates.rs
tiledb/queries/examples/output/: .gitignore
tiledb/queries/src/: aggregate.rs  lib.rs
tiledb/query-core/: Cargo.toml
tiledb/query-core/examples/: multi_range_subarray_arrow.rs  query_condition_dense_arrow.rs  query_condition_sparse_arrow.rs  quickstart_dense_arrow.rs  quickstart_sparse_string_arrow.rs  reading_incomplete_arrow.rs
tiledb/query-core/src/: arrow.rs  buffers.rs  field.rs  fields.rs  lib.rs  subarray.rs  tests.rs
tiledb/query-core/src/buffers/: mod.rs  tests.rs
tiledb/query-core/src/datatype/: compatibility.rs  default_to.rs  mod.rs
tiledb/query-core/src/fields/: mod.rs  tests.rs
tiledb/serde/: Cargo.toml
tiledb/serde/src/: lib.rs  strategy.rs
tiledb/serde/src/array/: mod.rs
tiledb/serde/src/filter/: mod.rs  strategy.rs
tiledb/serde/src/query/: subarray.rs
tiledb/sys/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  ignored.rs  remapped.rs  wrapper.h
tiledb/sys/src/: aggregate.rs  array.rs  array_type.rs  attribute.rs  capi_enum.rs  config.rs  context.rs  datatype.rs  dimension.rs  domain.rs  encryption.rs  enumeration.rs  error.rs  field.rs  filesystem.rs  filter.rs  filter_list.rs  filter_option.rs  filter_type.rs  fragment_info.rs  group.rs  lib.rs  object.rs  query.rs  query_condition.rs  schema.rs  schema_evolution.rs  stats.rs  string.rs  subarray.rs  types.rs  unwrapped.rs  version.rs  vfs.rs
tiledb/sys/static_build/: LinkInfo.cmake  link_info.cc  linker_launcher.sh
tiledb/sys/tests/: link_test.rs
tiledb/test-utils/: Cargo.toml
tiledb/test-utils/src/: lib.rs  signal.rs  uri_generators.rs
tiledb/test-utils/src/strategy/: meta.rs  mod.rs  records.rs  sequence.rs
tiledb/utils/: Cargo.toml
tiledb/utils/src/: build.rs  lib.rs  numbers.rs  option.rs
tools/api-coverage/: Cargo.toml  README.md
tools/api-coverage/src/: api.rs  generated.rs  main.rs  remapped.rs  sys.rs  util.rs
(+264 files in other folders)
