[workspace]
resolver = "2"
members = [
  "tiledb/api",
  "tiledb/common",
  "tiledb/pod",
  "tiledb/proc-macro",
  "tiledb/queries",
  "tiledb/sys",
  "tiledb/utils",
  "test-utils/cells",
  "test-utils/proptest-config",
  "test-utils/signal",
  "test-utils/strategy-ext",
  "test-utils/uri",
  "tools/api-coverage"
]
default-members = [
  "tiledb/api",
  "tiledb/common",
  "tiledb/pod",
  "tiledb/proc-macro",
  "tiledb/queries",
  "tiledb/sys",
  "tiledb/utils",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "52.0.0", features = ["prettyprint"] }
arrow-schema = { version = "52.0.0" }
cells = { path = "test-utils/cells", version = "0.1.0" }
itertools = "0"
num-traits = "0.2"
paste = "1.0"
proptest = { version = "1.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
signal = { path = "test-utils/signal", version = "0.1.0" }
strategy-ext = { path = "test-utils/strategy-ext", version = "0.1.0" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tiledb-api = { path = "tiledb/api", version = "0.1.0" }
tiledb-common = { path = "tiledb/common", version = "0.1.0" }
tiledb-pod = { path = "tiledb/pod", version = "0.1.0" }
tiledb-proc-macro = { path = "tiledb/proc-macro", version = "0.1.0" }
tiledb-proptest-config = { path = "test-utils/proptest-config", version = "0.1.0" }
tiledb-sys = { path = "tiledb/sys", version = "0.1.0" }
tiledb-test-utils = { path = "tiledb/test-utils", version = "0.1.0" }
tiledb-utils = { path = "tiledb/utils", version = "0.1.0" }
pkg-config = "0.3.30"
uri = { path = "test-utils/uri", version = "0.1.0" }
