[workspace]
resolver = "2"
members = [
    "tiledb/api",
    "tiledb/common",
    "tiledb/pod",
    "tiledb/proc-macro",
    "tiledb/queries",
    "tiledb/sys",
    "tiledb/sys-cfg",
    "tiledb/sys-defs",
    "tiledb/utils",
    "test-utils/cells",
    "test-utils/proptest-config",
    "test-utils/strategy-ext",
    "test-utils/uri",
    "tools/api-coverage",
]
default-members = [
    "tiledb/api",
    "tiledb/common",
    "tiledb/pod",
    "tiledb/proc-macro",
    "tiledb/queries",
    "tiledb/utils",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.metadata.libtiledb]
version = "main"

[patch.crates-io]
# Remove once this PR hits a release:
# https://github.com/apache/arrow-rs/pull/7198
chrono = { git = "https://github.com/davisp/chrono", rev = "8b863490d88ba098038392c8aa930012ffd0c439" }
# Remove once this PR hits a release:
# https://github.com/rust-lang/pkg-config-rs/pull/183
pkg-config = { git = "https://github.com/teo-tsirpanis/pkg-config-rs", rev = "9da252047c9bacf5c714a4eb3e43eae4f5955196" }

[workspace.dependencies]
anyhow = "1.0"
armerge = "2"
arrow = { version = "52.0.0", features = ["prettyprint"] }
arrow-schema = "52.0.0"
bindgen = "0.70"
cells = { path = "test-utils/cells" }
cmake = "0.1"
itertools = "0"
num-traits = "0.2"
paste = "1.0"
pkg-config = "0.3.30"
proptest = "1.0.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
strategy-ext = { path = "test-utils/strategy-ext" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tiledb-api = { path = "tiledb/api" }
tiledb-common = { path = "tiledb/common" }
tiledb-pod = { path = "tiledb/pod" }
tiledb-proc-macro = { path = "tiledb/proc-macro" }
tiledb-proptest-config = { path = "test-utils/proptest-config" }
tiledb-sys = { path = "tiledb/sys" }
tiledb-sys-cfg = { path = "tiledb/sys-cfg" }
tiledb-sys-defs = { path = "tiledb/sys-defs" }
tiledb-test-utils = { path = "tiledb/test-utils" }
tiledb-utils = { path = "tiledb/utils" }
uri = { path = "test-utils/uri" }
