[package]
name = "arrow-proptest-strategies"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
half = { workspace = true }
proptest = { workspace = true }
strategy-ext = { workspace = true }

[dev-dependencies]

[features]
default = []
