[package]
name = "tiledb-api"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tiledb_api"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, optional = true }
itertools = "0"
num-traits = { workspace = true, optional = true }
paste = { workspace = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tiledb-common = { workspace = true }
tiledb-proc-macro = { workspace = true }
tiledb-sys = { workspace = true }
tiledb-test-utils = { workspace = true, optional = true }

[dev-dependencies]
num-traits = { workspace = true }
proptest = { workspace = true }
tiledb-test-utils = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }
tiledb-utils = { workspace = true }

[features]
default = []
arrow = ["dep:arrow"]
serde = ["dep:serde", "dep:serde_json"]

[[example]]
name = "using_tiledb_stats"
required-features = ["serde"]
