[package]
name = "tiledb-api"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tiledb_api"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, optional = true }
itertools = "0"
num-traits = { workspace = true, optional = true }
paste = { workspace = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tiledb-common = { workspace = true }
tiledb-serde = { workspace = true, optional = true, features = ["serde"] }
tiledb-sys = { workspace = true }

[dev-dependencies]
cells = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true }
tiledb-common = { workspace = true, features = ["option-subset"] }
tiledb-utils = { workspace = true }
tiledb-serde = { workspace = true, features = ["proptest-strategies", "option-subset", "serde"] }
uri = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }
tiledb-utils = { workspace = true }

[features]
default = []
arrow = ["dep:arrow"]
serde = ["dep:serde", "dep:serde_json", "dep:tiledb-serde"]

[[example]]
name = "using_tiledb_stats"
required-features = ["serde"]
