[package]
name = "tiledb-api"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tiledb_api"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, optional = true }
cells = { workspace = true, features = ["proptest-strategies"], optional = true }
itertools = { workspace = true }
num-traits = { workspace = true, optional = true }
paste = { workspace = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tiledb-common = { workspace = true }
tiledb-pod = { workspace = true, optional = true, features = ["serde"] }
tiledb-sys = { workspace = true }

[dev-dependencies]
cells = { workspace = true, features = ["proptest-strategies"] }
num-traits = { workspace = true }
proptest = { workspace = true }
tiledb-common = { workspace = true, features = ["option-subset"] }
tiledb-pod = { workspace = true, features = ["proptest-strategies", "option-subset", "serde"] }
tiledb-utils = { workspace = true }
uri = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }
tiledb-utils = { workspace = true }

[features]
default = []
arrow = ["dep:arrow", "dep:serde", "dep:serde_json", "tiledb-common/arrow", "tiledb-common/serde"]
proptest-strategies = ["dep:cells", "dep:proptest"]
serde = ["dep:serde", "dep:serde_json", "dep:tiledb-pod"]

[[example]]
name = "fragment_info"
required-features = ["serde"]

[[example]]
name = "using_tiledb_stats"
required-features = ["serde"]
