[package]
name = "tiledb-api2"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cxx.workspace = true
tiledb-common.workspace = true
tiledb-sys2.workspace = true
thiserror.workspace = true

[dev-dependencies]
uri.workspace = true

[build-dependencies]
tiledb-sys-cfg.workspace = true
