[package]
name = "tiledb-arrow"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-schema = { version = "50.0.0", default-features = false }
tiledb = { workspace = true }

[dev-dependencies]
proptest = "1.0.0"
tiledb-test = { workspace = true }
