[package]
name = "tiledb-arrow"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-schema = { version = "50.0.0", default-features = false }
proptest = { version = "1.0.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { workspace = true }
tiledb = { workspace = true }

[dev-dependencies]
proptest = { version = "1.0.0" }
tiledb = { workspace = true, features = ["proptest-strategies"] }

[features]
default = []
proptest-strategies = ["dep:proptest", "tiledb/proptest-strategies"]
