[package]
name = "tiledb-proc-macro"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
tiledb = { workspace = true }

[lib]
proc-macro = true
