[package]
name = "tiledb-proptests"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = { version = "1.0.0" }
rand = { version = "0.8.5" }
tiledb = { workspace = true }
