[package]
name = "tiledb-proptests"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
proptest = { version = "1.0.0" }
rand = { version = "0.8.5" }
num-traits = { version = "0.2" }
tiledb = { workspace = true }
tiledb-utils = { workspace = true, features = ["serde_json"] }
serde_json = { workspace = true }
tempfile = "3"
