[package]
name = "tiledb-query-adapters"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tiledb-api = { workspace = true }
tiledb-common = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }
tiledb-utils = { workspace = true }
