[package]
name = "tiledb-serde"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-traits = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tiledb-common = { workspace = true }
tiledb-proc-macro = { workspace = true, optional = true }
tiledb-utils = { workspace = true, optional = true }
tiledb-test-utils = { workspace = true, optional = true }
tiledb-sys = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
option-subset = ["dep:tiledb-proc-macro", "dep:tiledb-utils", "tiledb-common/option-subset"]
proptest-strategies = ["dep:num-traits", "dep:proptest", "dep:tiledb-test-utils"]
serde = ["dep:serde", "tiledb-common/serde"]
