[package]
name = "tiledb-sys"
version = { workspace = true }
edition = { workspace = true }
links = "tiledb"

[dependencies]
tiledb-sys-defs = { workspace = true }

[build-dependencies]
armerge = { workspace = true }
bindgen = { workspace = true }
cmake = { workspace = true }
pkg-config = { workspace = true }
regex = { workspace = true }
tiledb-utils = { workspace = true }
thiserror = { workspace = true }
tiledb-sys-cfg = { workspace = true }
