[package]
name = "tiledb-test-utils"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
nix = { version = "0", features = ["signal"], optional = true }
proptest = { workspace = true }
tempfile = "3"

[features]
default = ["signal"]
signal = ["dep:nix"]
