[package]
name = "tiledb-utils"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
float_next_after = "1.0.0"
num-traits = { version = "0.2" }
serde_json = { workspace = true, optional = true }
tiledb-proc-macro = { workspace = true }

[features]
serde_json = ["dep:serde_json"]
